[package]
name = "stack-trait"
edition = "2021"
version = "0.3.0"
authors = ["Dmitrii Demenev <demenev.dmitriy1@gmail.com>"]
description = "Stack trait with entry API for the LIFO element."
documentation = "https://docs.rs/stack-trait"
readme = "README.md"
keywords = ["entry", "vec", "stack", "trait"]
categories = ["rust-patterns", "data-structures"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JohnScience/stack-trait"
